--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 <body>
     <!-- HEADER -->
-    <div class="header"></div>
+    <div class="header">
+        <img src="./image/LOGO.png" alt="logo">
+        <ul>
+            <li><a href="#">TRANG CHỦ</a></li>
+            <li><a href="#">GIỚI THIỆU</a></li>
+            <li><a href="#">SẢN PHẨM</a></li>
+            <li><a href="#">TIN TỨC</a></li>
+            <li><a href="#">LIÊN HỆ</a></li>
+        </ul>
+    </div>
+
     <!-- CAROUSEL -->
     <div class="carousel"></div>
     <!-- INTRO -->
