#4 - congnpt add css for carousel

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </ul>
     </div>
     <!-- CAROUSEL -->
-    <div class="carousel"></div>
+    <div class="carousel">
+        
+    </div>
     <!-- INTRO -->
     <div class="intro"></div>
     <!-- PRODUCTS -->
