--- a/index.html
+++ b/index.html
@@ -1,37 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interior Design</title>
-    <link rel="stylesheet" href="./css/index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/index.css" />
+  </head>
+
+  <body>
     <!-- HEADER -->
     <div class="header">
-        <img src="./image/LOGO.png" alt="logo">
-        <ul>
-            <li><a href="#">TRANG CHỦ</a></li>
-            <li><a href="#">GIỚI THIỆU</a></li>
-            <li><a href="#">SẢN PHẨM</a></li>
-            <li><a href="#">TIN TỨC</a></li>
-            <li><a href="#">LIÊN HỆ</a></li>
-        </ul>
+      <img src="./image/LOGO.png" alt="logo" />
+      <ul>
+        <li><a href="#">TRANG CHỦ</a></li>
+        <li><a href="#">GIỚI THIỆU</a></li>
+        <li><a href="#">SẢN PHẨM</a></li>
+        <li><a href="#">TIN TỨC</a></li>
+        <li><a href="#">LIÊN HỆ</a></li>
+      </ul>
     </div>
     <!-- CAROUSEL -->
-    <div class="carousel">
-        
-    </div>
+    <div class="carousel"></div>
     <!-- INTRO -->
     <div class="intro"></div>
     <!-- PRODUCTS -->
-    <div class="products"></div>
+    <div class="products">
+      <h2>CÁC SẢN PHẨM BÁN CHẠY</h2>
+      <div class="products__content">
+        <div class="products__item">
+          <img src="./image/sp_1.jpg" alt="SP001" />
+          <h3>SP001</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+            cupiditate quia excepturi unde dolorem debitis esse facilis quam
+            obcaecati nam enim fuga nulla eum rem totam, aperiam dicta nisi et?
+          </p>
+          <button>Chi tiết</button>
+        </div>
+        <div class="products__item">
+          <img src="./image/sp_2.jpg" alt="SP002" />
+          <h3>SP002</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+            cupiditate quia excepturi unde dolorem debitis esse facilis quam
+            obcaecati nam enim fuga nulla eum rem totam, aperiam dicta nisi et?
+          </p>
+          <button>Chi tiết</button>
+        </div>
+        <div class="products__item">
+          <img src="./image/sp_3.jpg" alt="SP003" />
+          <h3>SP003</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+            cupiditate quia excepturi unde dolorem debitis esse facilis quam
+            obcaecati nam enim fuga nulla eum rem totam, aperiam dicta nisi et?
+          </p>
+          <button>Chi tiết</button>
+        </div>
+        <div class="products__item">
+          <img src="./image/sp_4.jpg" alt="SP004" />
+          <h3>SP003</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+            cupiditate quia excepturi unde dolorem debitis esse facilis quam
+            obcaecati nam enim fuga nulla eum rem totam, aperiam dicta nisi et?
+          </p>
+          <button>Chi tiết</button>
+        </div>
+      </div>
+      <div class="clear"></div>
+    </div>
+
     <!-- BANNER -->
     <div class="banner"></div>
     <!-- SERVICES -->
     <div class="services"></div>
     <!-- FOOTER -->
     <div class="footer"></div>
-</body>
+  </body>
 </html>
