--- a/index.html
+++ b/index.html
@@ -23,7 +23,47 @@
     <!-- CAROUSEL -->
     <div class="carousel"></div>
     <!-- INTRO -->
-    <div class="intro"></div>
+    <div class="intro">
+      <p class="intro__text">
+        Tại <span>KLK PHUC THINH</span> Lorem ipsum dolor sit amet consectetur,
+        adipisicing elit. Illum reprehenderit eaque totam officiis pariatur,
+        eius ut, temporibus blanditiis modi, obcaecati error! Excepturi quasi
+        quia totam quos quas possimus unde perspiciatis, sequi ratione
+        voluptatem neque molestias dolorum molestiae doloremque, hic illo
+        eveniet officia corporis harum iste, error laboriosam delectus numquam
+        dolor. Eos magnam quas expedita, blanditiis aperiam maxime dolore,
+        molestiae tenetur modi veritatis esse porro facere ducimus, laboriosam
+        pariatur nisi dolor. Labore quis necessitatibus quod doloribus, suscipit
+        perspiciatis! Recusandae ea ab deserunt cumque esse quidem modi
+        excepturi in, expedita minus. Eum dolores numquam hic soluta nam,
+        laboriosam vel doloribus dignissimos ipsa. Consequatur natus nemo
+        obcaecati voluptatibus similique placeat deserunt rerum quia corporis
+        ratione molestias eveniet aperiam non, delectus animi, explicabo dolor
+        sunt!
+      </p>
+      <div class="intro__content">
+        <div class="intro__left">
+          <div class="intro__item intro__item--small">
+            <img src="./image/img_nha_tam.jpg" alt="nha_tam" />
+          </div>
+          <div class="intro__item intro__item--small">
+            <img src="./image/img_sofa.jpg" alt="sofa" />
+          </div>
+          <div class="intro__item">
+            <img src="./image/img_noi_that.jpg" alt="noi_that" />
+          </div>
+        </div>
+        <div class="intro__right">
+          <div class="intro__item">
+            <img src="./image/img_phong_khach.jpg" alt="phong_khach" />
+          </div>
+          <div class="intro__item">
+            <img src="./image/img_van_phong.jpg" alt="van_phong" />
+          </div>
+        </div>
+      </div>
+      <div class="clear"></div>
+    </div>
     <!-- PRODUCTS -->
     <div class="products">
       <h2>CÁC SẢN PHẨM BÁN CHẠY</h2>
