--- a/index.html
+++ b/index.html
@@ -111,9 +111,15 @@
       </div>
       <div class="clear"></div>
     </div>
-
     <!-- BANNER -->
-    <div class="banner"></div>
+    <div class="banner">
+      <div class="banner__circle">
+        <p>SALE OFF</p>
+        <p>50%</p>
+        <p>Các sản phẩm sofa</p>
+        <p>Tháng 7</p>
+      </div>
+    </div>
     <!-- SERVICES -->
     <div class="services"></div>
     <!-- FOOTER -->
