#7 - congnpt create services and add css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interior Design</title>
+    <!-- FONT AWESOME -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+    />
+
+    <!-- MAIN CSS -->
     <link rel="stylesheet" href="./css/index.css" />
   </head>
 
@@ -121,7 +128,41 @@
       </div>
     </div>
     <!-- SERVICES -->
-    <div class="services"></div>
+    <div class="services">
+      <div class="services__content">
+        <div class="services__item">
+          <i class="fa fa-home"></i>
+          <h2>Dịch vụ bảo hành</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum
+            rerum alias enim maxime, quia odit blanditiis deleniti excepturi
+            placeat, eveniet quo cum eaque quidem? Ipsum ratione error
+            repudiandae aperiam expedita?
+          </p>
+        </div>
+        <div class="services__item">
+          <i class="fa fa-pencil-alt"></i>
+          <h2>Thiết kế nội thất</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum
+            rerum alias enim maxime, quia odit blanditiis deleniti excepturi
+            placeat, eveniet quo cum eaque quidem? Ipsum ratione error
+            repudiandae aperiam expedita?
+          </p>
+        </div>
+        <div class="services__item">
+          <i class="fa fa-user"></i>
+          <h2>Đội ngũ nhân lực</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum
+            rerum alias enim maxime, quia odit blanditiis deleniti excepturi
+            placeat, eveniet quo cum eaque quidem? Ipsum ratione error
+            repudiandae aperiam expedita?
+          </p>
+        </div>
+      </div>
+      <div class="clear"></div>
+    </div>
     <!-- FOOTER -->
     <div class="footer"></div>
   </body>
