#8 - congnpt create services and add css

--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
       <div class="clear"></div>
     </div>
     <!-- FOOTER -->
-    <div class="footer"></div>
+    <div class="footer">
+      
+    </div>
   </body>
 </html>
