--- a/index.html
+++ b/index.html
@@ -165,7 +165,10 @@
     </div>
     <!-- FOOTER -->
     <div class="footer">
-      
+      <h2>Interior Design</h2>
+      <p>Địa chỉ: 459 Sư Vạn Hạnh, Quận 10, TP Hồ Chí Minh</p>
+      <p>Diện thoại: (84) 96.105.1014</p>
+      <p>Điện thoại di động: (84) 96.105.1014</p>
     </div>
   </body>
 </html>
